<resources>
    <string name="app_name">SafeTress</string>
    <string name="logo_aplication">Logo de la aplicacion</string>
    <string name="text_welcome_subtitle">Selecciona la mejor opcion</string>
    <string name="text_welcome_subtitle2">Seguro y rentable</string>
    <string name="text_create_account">Crear cuenta</string>
    <string name="text_have_an_account">¿Ya tiene una cuenta?</string>
    <string name="text_sign_in">Iniciar Sesion</string>
    <string name="text_title_signup">Registrate</string>
    <string name="view_rectangle">view</string>
    <string name="text_email_signup">Correo Electronico</string>
    <string name="text_name_user_signup">Nombre de usuario</string>
    <string name="text_password_signup">Contraseña</string>
    <string name="sign_up_activity_title">Registrarse</string>
    <string name="welcome_to_login_activity">Bienvenido a SafeTress</string>
    <string name="btn_login_user">Iniciar sesion</string>
    <string name="text_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="text_title_signin">"Iniciar Sesion "</string>
    <string name="welcome_login_success">Bienvenido</string>
    <string name="main_error">Error</string>
    <string name="main_message_error">Ha ocurrido un error autenticando al usuario</string>
    <string name="main_btn_positive_sckbr">Aceptar</string>
    <string name="init_session_with_google">Iniciar sesion con Google</string>
    <string name="title_home">Home</string>
    <string name="server_client_id">149001322140-l4urb5l78imlloddr8ui8rqqmv5lhsnd.apps.googleusercontent.com</string>

    <string name="title_Recomends">Recomendaciones</string>
    <string name="title_profile">Usuario</string>\


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add">Agregar</string>
    <string name="signOut">Cerrar sesion</string>
    <string name="dialogo_exitoso">Registro exitoso.</string>
    <string name="dialogo_datos_insuficientes">Te falto llenar un campo.</string>
    <string name="dialogo_aceptar">Aceptar</string>
    <string name="text_sign_out">Sesion cerrada.</string>
    <string name="text_create_account_failed">Registro fallido.</string>

    <string name="facebook_app_id">1037661130443801</string>
    <string name="facebook_application_id">1037661130443801</string>
    <string name="fb_login_protocol_scheme">13879618a9ed1ae4e0fcdf7d5e41e05c</string>
    <string name="facebook_client_token">27b85fe1f1646d0ae550f113a5935286</string>
    <string name="search_hint">Buscar arboles por estado...</string>
    <string name="description_img_photo">Imagen del arbol</string>
    <string name="text_title_home">¿En que estado de mexico se encuentra?</string>
    <string name="text_title_add">Sube tus consejos para tener un buen árbol</string>
    <string name="counter_max_caracteres">Maximo de caracteres:</string>
    <string name="description_image">Imagen de la recomendacion</string>
    <string name="button_image_description">Boton para subir la imagen</string>
    <string name="text_description_recommendation">Descripcion...</string>
    <string name="text_recommendation_title">Recomendacion</string>
    <string name="submit_button_text">Publicar</string>
    <string name="text_image_recommendation">Imagen de la recomendacion</string>
    <string name="btn_delete_post">Boton de eliminar</string>
    <string name="text_name_user_item">Nombre de la recomendacion</string>
    <string name="required_texts">Llene todos los campos.</string>
    <string name="post_publicado">Post publicado.</string>
    <string name="post_message_title">Sube tus consejos para tener un buen arbol</string>
    <string name="instantanea_fallida">Hubo un error, intentalo de nuevo.</string>
    <string name="post_message_valid_title">Porfavor, llena todos los datos</string>
    <string name="dialog_delete_snapshot">Desea eliminar el post?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="image_detail_description">Imagen de la recomendacion</string>
    <string name="text_title_detail">Nombre</string>
    <string name="text_description_detail">Descripcion de la recomendacion</string>
    <string name="text_phrase">Esperamos que te haya servido la recomendacion!</string>


</resources>