<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context="app.safetress.application.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:contentDescription="@string/logo_aplication"
        android:src="@drawable/safe_tress_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/numans"
        android:text="@string/text_welcome_subtitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/common_padding_default"
        android:fontFamily="@font/numans"
        android:text="@string/text_welcome_subtitle2"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSigninGoogle"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/init_session_with_google"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/common_google_signin_btn_icon_dark"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/common_padding_default"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:backgroundTint="@color/color_bg_welcome"
        android:text="@string/text_create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:fontFamily="@font/numans"
        android:text="@string/text_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvSignIn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:fontFamily="@font/numans"
        android:text="@string/text_sign_in"
        android:textColor="@color/blue_signin"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>