<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.safetress.application.recommendsModule.DetailFragment">


    <ImageView
        android:id="@+id/ivDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/fertilizacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_detail_description"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginTop="@dimen/common_padding_default"
        android:textStyle="bold"
        android:text="@string/text_title_detail"
        app:layout_constraintTop_toBottomOf="@+id/ivDetail"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescriptionDetail"
        style="?attr/textAppearanceSubtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:text="@string/text_description_detail"
        android:maxLines="10"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/tvName"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPhrase"
        style="?attr/textAppearanceSubtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_max"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:text="@string/text_phrase"
        android:maxLines="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>