<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.safetress.application.SignUpActivity">

    <ImageView
        android:id="@+id/viewRectangle"
        android:layout_width="346dp"
        android:layout_height="552dp"
        android:elevation="2dp"
        android:background="@drawable/rectangle_view"
        android:contentDescription="@string/view_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:srcCompat="@drawable/rectangle_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginTop="@dimen/common_padding_max"
        android:text="@string/text_title_signup"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/numans"
        app:layout_constraintStart_toStartOf="@+id/viewRectangle"
        app:layout_constraintTop_toTopOf="@+id/viewRectangle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginEnd="@dimen/common_padding_max"
        android:layout_marginTop="@dimen/common_padding_default"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@+id/viewRectangle"
        app:layout_constraintEnd_toEndOf="@+id/viewRectangle"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/text_email_signup" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginEnd="@dimen/common_padding_max"
        android:layout_marginTop="@dimen/common_padding_default"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@+id/viewRectangle"
        app:layout_constraintEnd_toEndOf="@+id/viewRectangle"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/text_name_user_signup" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginStart="@dimen/common_padding_max"
        android:layout_marginEnd="@dimen/common_padding_max"
        android:layout_marginTop="@dimen/common_padding_default"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/viewRectangle"
        app:layout_constraintStart_toStartOf="@+id/viewRectangle"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/text_password_signup" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="@dimen/common_padding_max"
        android:backgroundTint="@color/color_bg_welcome"
        android:text="@string/text_title_signup"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>