<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardElevation="@dimen/common_padding_min"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_min"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNameRecommendation"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:background="?attr/selectableItemBackground"
            android:text="@string/text_name_user_item"
            app:layout_constraintStart_toEndOf="@+id/cbLike"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescriptionRecommendation"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:background="?attr/selectableItemBackground"
            android:text="@string/text_description_recommendation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameRecommendation" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_min"
            android:contentDescription="@string/text_image_recommendation"
            app:layout_constraintBottom_toTopOf="@+id/cbLike"
            app:layout_constraintDimensionRatio="H, 4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionRecommendation" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginBottom="@dimen/common_padding_default"
            android:button="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>